test/netlist/error/redefining-primitive.bop
and(a, b) = c
where
  c = xor(a, b);
end where;
